# RustSocks

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LDAP_GROUPS_GUIDE.md  LDAP_GROUPS_INTEGRATION.md  LICENSE  README-DOCKER.md  README.md  TASK_LIST.md  acl-engine-implementation.md  comprehensive-summary.md  deny.toml  docker-compose.yml  pam-authentication-implementation.md  rust-socks-project-plan.md  session-manager-implementation.md  sessions.db
.claude/: settings.local.json
.github/workflows/: ci.yml  coverage.yml
benches/: batch_writer_lock.rs  handshake_latency.rs  protocol_parsing.rs  session_cloning.rs  udp_serialization.rs
config/: acl.toml  rustsocks.toml  rustsocks_minimal.toml
config/examples/: acl-ad-example.toml  krb5-ad.conf  rustsocks-ad.toml  rustsocks-dashboard-auth.toml  rustsocks-gssapi.toml  sssd-ad.conf
config/pam.d/: README.md  rustsocks  rustsocks-client  rustsocks-client-test  rustsocks-test
dashboard/: README.md  index.html  package.json  vite.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/components/: SessionDetailDrawer.jsx  SessionDetailDrawer.test.jsx  SystemResources.jsx  UserDetailModal.jsx
dashboard/src/contexts/: AuthContext.jsx
dashboard/src/lib/: basePath.js  format.js  format.test.js  sessions.js  sessions.test.js
dashboard/src/pages/: AclRules.jsx  Configuration.jsx  Dashboard.jsx  Diagnostics.jsx  Diagnostics.test.jsx  Login.jsx  Sessions.jsx  Statistics.jsx  Telemetry.jsx  UserManagement.jsx
docker/: entrypoint.sh
docker/configs/: acl.toml  rustsocks.toml
docker/configs/pam.d/: rustsocks  rustsocks-client
docs/: README.md
docs/examples/: rustsocks.example.toml
docs/guides/: active-directory.md  building-with-base-path.md  dashboard-authentication.md  ldap-groups.md  testing.md  web-dashboard.md
docs/technical/: acl-engine.md  architecture.md  connection-pool.md  pam-authentication.md  protocol.md  session-management.md
examples/: echo_server.rs  hot_reload_example.rs  loadtest.rs
loadtests/: MANUAL.md  README.md  run_loadtests.sh
loadtests/k6/: api_load_test.js
loadtests/scripts/: benchmark_regression.sh
migrations/: 001_create_sessions_table.sql  002_add_composite_indexes.sql  003_create_metrics_table.sql  004_optimize_statistics.sql  005_add_sorting_indexes.sql  006_optimize_duration_source_sorting.sql  007_refresh_statistics.sql
scripts/: README.md  ci-local.sh
src/: lib.rs  main.rs  telemetry.rs
src/acl/: crud.rs  engine.rs  loader.rs  matcher.rs  mod.rs  persistence.rs  stats.rs  types.rs  watcher.rs
src/api/: auth.rs  mod.rs  server.rs  types.rs
src/api/handlers/: acl_management.rs  diagnostics.rs  management.rs  mod.rs  pool.rs  sessions.rs  system_resources.rs  telemetry.rs
src/auth/: groups.rs  gssapi.rs  mod.rs  pam.rs
src/config/: mod.rs
src/protocol/: mod.rs  parser.rs  types.rs
src/qos/: htb.rs  metrics.rs  mod.rs  token_bucket.rs  types.rs
src/server/: bind.rs  handler.rs  listener.rs  mod.rs  pool.rs  proxy.rs  resolver.rs  stats.rs  udp.rs
src/session/: batch.rs  history.rs  manager.rs  metrics.rs  mod.rs  store.rs  types.rs
src/utils/: error.rs  mod.rs  system.rs
tests/: acl_api.rs  acl_integration.rs  acl_unit.rs  api_endpoints.rs  bind_command.rs  connection_pool.rs  e2e_tests.rs  ipv6_domain.rs  ldap_groups.rs  pam_integration.rs  pool_concurrency.rs  pool_edge_cases.rs  pool_socks_integration.rs  pool_system_verification.rs  protocol_edge_cases.rs  qos_integration.rs  qos_unit.rs  resolver_edge_cases.rs  session_manager_edge_cases.rs  session_tracking.rs  tls_support.rs  udp_associate.rs
