[package]
name = "rustsocks"
version = "0.2.0"
edition = "2021"
authors = ["RustSocks Contributors"]
description = "High-performance SOCKS5 proxy server in Rust"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Networking
bytes = "1.5"
futures = "0.3"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

# API Documentation
utoipa = "4.2"
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# ACL & Session Management
ipnet = "2.9"           # CIDR parsing and matching
notify = "6.1"          # File watching for hot reload
dashmap = "5.5"         # Concurrent hashmap for active sessions
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"          # For wildcard domain matching

# Database (SQLite for session history)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros", "migrate"], optional = true }

# Metrics
prometheus = { version = "0.13", optional = true }
lazy_static = { version = "1.4", optional = true }

# Performance: Fast allocator (5-15% faster than system allocator)
mimalloc = { version = "0.1", optional = true }

[features]
default = ["metrics", "fast-allocator"]
metrics = ["prometheus", "lazy_static"]
database = ["sqlx"]
fast-allocator = ["mimalloc"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
pam-sys = "0.5.6"

[target.'cfg(unix)'.dependencies]
pam = "0.7"
nix = { version = "0.27", features = ["user"] }  # For getgrouplist() - LDAP groups
libc = "0.2"  # For getgrouplist() syscall
